Added Product Read endpoint
